default/objects/Speech_analytics__c/Speech_analytics__c.object-meta.xml
<CustomObject>
    <description>integration of speech analytics, a quality control initiative</description>
    <label>Speech analytics</label>
    <nameField>
        <displayFormat>SA{00000000}</displayFormat>
        <label>Speech analytics Имя</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speech analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>