default/objects/Speech_analytics__c/fields/Closed_the_deal_incorrectly__c.field-meta.xml
<CustomField>
    <fullName>Closed_the_deal_incorrectly__c</fullName>
    <label>Closed the deal incorrectly</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quick start</fullName>
            </value>
            <value>
                <fullName>Financial conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>