default/objects/Speech_analytics__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Интерес</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Speech analytics</relationshipLabel>
    <relationshipName>Speech_analytics</relationshipName>
    <type>Lookup</type>
</CustomField>