default/objects/Speech_analytics__c/fields/No_request_INN__c.field-meta.xml
<CustomField>
    <fullName>No_request_INN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No request INN</label>
    <type>Checkbox</type>
</CustomField>