default/objects/Speech_analytics__c/fields/Note_QA__c.field-meta.xml
<CustomField>
    <fullName>Note_QA__c</fullName>
    <label>Note QA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>