default/objects/Speech_analytics__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Возможность</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Speech analytics</relationshipLabel>
    <relationshipName>Speech_analytics</relationshipName>
    <type>Lookup</type>
</CustomField>