default/objects/Speech_analytics__c/fields/Refund_by_INN__c.field-meta.xml
<CustomField>
    <fullName>Refund_by_INN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund by INN</label>
    <type>Checkbox</type>
</CustomField>