default/objects/Speech_analytics__c/fields/Sales_comment__c.field-meta.xml
<CustomField>
    <fullName>Sales_comment__c</fullName>
    <label>Sales comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>