default/objects/Speech_analytics__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Tire service</fullName>
            </value>
            <value>
                <fullName>Car wash</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>Business trips</fullName>
            </value>
            <value>
                <fullName>Related products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>