default/objects/Speech_analytics__c/fields/Transfer_from_SF__c.field-meta.xml
<CustomField>
    <fullName>Transfer_from_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer from SF</label>
    <type>Checkbox</type>
</CustomField>