default/objects/Speech_analytics__c/fields/Transport_is_not_on_the_balance_sheet__c.field-meta.xml
<CustomField>
    <fullName>Transport_is_not_on_the_balance_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport is not on the balance sheet</label>
    <type>Checkbox</type>
</CustomField>